syntax = "proto3";
import public "global_options.proto";

option go_package="./;proto";
option java_package = "org.liquibase.grpc.proto";
option java_multiple_files = true;
option java_outer_classname = "ChangelogSyncToTagSqlProto";

package liquibase;

service ChangelogSyncToTagSqlService {
  rpc execute(ChangelogSyncToTagSqlRequest) returns (Response) {}
}

/* Output the raw SQL used by Liquibase when running changelogSyncToTag */
message ChangelogSyncToTagSqlRequest {
  string changelog_file = 1; // *required* The root changelog file
  optional string context_filter = 2; // Context string to use for filtering
  optional string default_catalog_name = 3; // The default catalog name to use for the database connection
  optional string default_schema_name = 4; // The default schema name to use for the database connection
  optional string driver = 5; // The JDBC driver class
  optional string driver_properties_file = 6; // The JDBC driver properties file
  optional string label_filter = 7; // Label expression to use for filtering
  optional bool output_default_catalog = 8; // Control whether names of objects in the default catalog are fully qualified or not. If true they are. If false, only objects outside the default catalog are fully qualified
  optional bool output_default_schema = 9; // Control whether names of objects in the default schema are fully qualified or not. If true they are. If false, only objects outside the default schema are fully qualified
  optional string password = 10; // Password to use to connect to the database
  string tag = 11; // *required* Tag ID to execute changelogSync to
  string url = 12; // *required* The JDBC database connection URL
  optional string username = 13; // Username to use to connect to the database
  liquibase.GlobalOptions global_options = 14;
}

message Response {
  string message = 1;
}
